[gd_scene load_steps=8 format=3 uid="uid://dry1mwyp5wp8e"]

[ext_resource type="Script" path="res://gui/quest_cell.gd" id="1_qbb60"]
[ext_resource type="Texture2D" uid="uid://caa0qyqfck4bn" path="res://home/icons/icon_checkmark.tres" id="2_dbbyi"]
[ext_resource type="Script" path="res://gui/better_button.gd" id="3_6dnbm"]
[ext_resource type="Texture2D" uid="uid://mrc8xjf8hoof" path="res://home/icons/icon_quit.tres" id="3_tssnb"]
[ext_resource type="Texture2D" uid="uid://cd6qjsu76wisy" path="res://home/icons/icon_coin.tres" id="5_aa18k"]
[ext_resource type="Texture2D" uid="uid://clxbb3vmrdr00" path="res://items/icons/icon_bagel.tres" id="5_itgpg"]
[ext_resource type="Texture2D" uid="uid://8m6p0fpu3pjw" path="res://home/icons/icon_calendar.tres" id="6_1b1qn"]

[node name="QuestCell" type="Panel"]
custom_minimum_size = Vector2(300, 132)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -440.0
offset_bottom = -349.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qbb60")

[node name="DescriptionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 25.0
offset_top = 4.0
offset_right = 295.0
offset_bottom = 52.0
text = "Quest name goes here
and spans 
over three lines"

[node name="RewardLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 0
offset_left = 25.0
offset_top = 59.0
offset_right = 189.0
offset_bottom = 75.0
text = "123"

[node name="AcceptButton" type="Button" parent="."]
custom_minimum_size = Vector2(96, 24)
layout_mode = 0
offset_left = 4.0
offset_top = 103.0
offset_right = 144.0
offset_bottom = 127.0
text = "ui_quest_accept"
icon = ExtResource("2_dbbyi")
text_overrun_behavior = 3
script = ExtResource("3_6dnbm")

[node name="DismissButton" type="Button" parent="."]
custom_minimum_size = Vector2(96, 24)
layout_mode = 0
offset_left = 156.0
offset_top = 103.0
offset_right = 296.0
offset_bottom = 127.0
text = "ui_quest_dismiss"
icon = ExtResource("3_tssnb")
text_overrun_behavior = 3
script = ExtResource("3_6dnbm")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("5_itgpg")

[node name="CoinIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 59.0
offset_right = 20.0
offset_bottom = 75.0
texture = ExtResource("5_aa18k")

[node name="ExpirationLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 0
offset_left = 25.0
offset_top = 79.0
offset_right = 285.0
offset_bottom = 95.0
text = "ui_quest_expiration"

[node name="CalendarIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 79.0
offset_right = 20.0
offset_bottom = 95.0
texture = ExtResource("6_1b1qn")

[connection signal="pressed" from="AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="DismissButton" to="." method="_on_dismiss_button_pressed"]
